--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@ html {
   // linear-gradient(
   //   #373737, #000000
   // );
-  background: #000;
+  background: #212121;
   color: white;
 }
 
@@ -18,14 +18,14 @@ body {
 }
 
 nav {
-  background-image:
-  linear-gradient(
-    #373737, #000000
-  );
+  // background-image:
+  // linear-gradient(
+  //   #373737, #000000
+  // );
   width: 100%;
   height: 200px;
   color: white;
-  text-align: center;
+  // text-align: center;
   font-family: 'Montserrat', sans-serif;
 
   // div {
