--- a/src/App.scss
+++ b/src/App.scss
@@ -17,32 +17,32 @@ body {
 
 }
 
-nav {
-  // background-image:
-  // linear-gradient(
-  //   #373737, #000000
-  // );
-  width: 100%;
-  height: 200px;
-  color: white;
-  // text-align: center;
-  font-family: 'Montserrat', sans-serif;
+// nav {
+//   // background-image:
+//   // linear-gradient(
+//   //   #373737, #000000
+//   // );
+//   width: 100%;
+//   height: 200px;
+//   color: white;
+//   // text-align: center;
+//   font-family: 'Montserrat', sans-serif;
 
-  // div {
-  //   display: inline;
-  //   height: 200px;
-  // }
-  h1 {
-    font-size: 60px;
-    font-weight: bold;
-    padding: 3px;
-    margin: 0;
-  }
-  h3 {
-    text-align: right;
-    font-weight: 100;
-    font-size: 50px;
-    margin: 0;
-    padding: 5px;
-  }
-}
+//   // div {
+//   //   display: inline;
+//   //   height: 200px;
+//   // }
+//   h1 {
+//     font-size: 60px;
+//     font-weight: bold;
+//     padding: 3px;
+//     margin: 0;
+//   }
+//   h3 {
+//     text-align: right;
+//     font-weight: 100;
+//     font-size: 50px;
+//     margin: 0;
+//     padding: 5px;
+//   }
+// }
